feat(page)추가 및 수정

--- a/kr/html/application-create-step1.html
+++ b/kr/html/application-create-step1.html
@@ -238,7 +238,7 @@
                     </div>
                 </div>
             </section>
-            <div class="page-btn-wrap">
+            <div class="page-btn-wrap both">
                 <button type="button" class="krds-btn tertiary">목록으로 가기</button>
                 <button type="button" class="krds-btn primary">사업신청하기</button>
             </div>
