--- a/kr/html/application-create-step2.html
+++ b/kr/html/application-create-step2.html
@@ -127,52 +127,59 @@
                                 <caption>사업내용 에산계획 표</caption>
                                 <colgroup>
                                     <col style="width:6%;">
-                                    <col style="width:15%;">
+                                    <col style="width:25%;">
                                     <col>
-                                    <col style="width:10%;">
+                                    <col style="width:15%;">
+                                    <col style="width:4%;">
                                 </colgroup>
-                                <thead>
-                                <tr>
-                                    <th scope="col">번호</th>
-                                    <th scope="col">항목</th>
-                                    <th scope="col">산출근거(원)</th>
-                                    <th scope="col">금액(천원)</th>
-                                </tr>
-                                </thead>
                                 <tbody>
                                     <tr>
                                         <td>1</td>
-                                        <td>항목명1</td>
-                                        <td class="td-basis">산출근거산출근거산출근거산출근거</td>
-                                        <td>1,000</td>
+                                        <td><input type="text" id="" class="krds-input small" placeholder="항목명을 입력해주세요"></td>
+                                        <td class="td-basis"><input type="text" id="" class="krds-input small" placeholder="산출근거를 입력해주세요"></td>
+                                        <td><input type="text" id="" class="krds-input small aling-right" placeholder="1,000"></td>
+                                        <td>
+                                            <a href="javascript:void(0)" class="krds-btn small line" title="삭제">
+                                                <i class="svg-icon ico-minus"></i>
+                                            </a>
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td>2</td>
-                                        <td>항목명2</td>
-                                        <td class="td-basis">산출근거산출근거산출근거산출근거산출근거산출근거산출근거산출근거산출근거산출근거산출근거산출근거</td>
-                                        <td>1,000</td>
+                                        <td><input type="text" id="" class="krds-input small" placeholder="항목명을 입력해주세요"></td>
+                                        <td class="td-basis"><input type="text" id="" class="krds-input small" placeholder="산출근거를 입력해주세요"></td>
+                                        <td><input type="text" id="" class="krds-input small aling-right" placeholder="1,000"></td>
+                                        <td>
+                                            <a href="javascript:void(0)" class="krds-btn small line" title="삭제">
+                                                <i class="svg-icon ico-minus"></i>
+                                            </a>
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td>3</td>
-                                        <td>항목명3</td>
-                                        <td class="td-basis">산출근거산출근거산출근거산출근거</td>
-                                        <td>600</td>
+                                        <td><input type="text" id="" class="krds-input small" placeholder="항목명을 입력해주세요"></td>
+                                        <td class="td-basis"><input type="text" id="" class="krds-input small" placeholder="산출근거를 입력해주세요"></td>
+                                        <td><input type="text" id="" class="krds-input small aling-right" placeholder="1,000"></td>
+                                        <td>
+                                            <a href="javascript:void(0)" class="krds-btn small line" title="삭제">
+                                                <i class="svg-icon ico-minus"></i>
+                                            </a>
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
-                                        <td>항목명4</td>
-                                        <td class="td-basis">산출근거산출근거산출근거산출근거</td>
-                                        <td>300</td>
-                                    </tr>
-                                    <tr>
-                                        <td>5</td>
-                                        <td>항목명1</td>
-                                        <td class="td-basis">산출근거산출근거산출근거산출근거</td>
-                                        <td>100</td>
+                                        <td><input type="text" id="" class="krds-input small" placeholder="항목명을 입력해주세요"></td>
+                                        <td class="td-basis"><input type="text" id="" class="krds-input small" placeholder="산출근거를 입력해주세요"></td>
+                                        <td><input type="text" id="" class="krds-input small aling-right" placeholder="1,000"></td>
+                                        <td>
+                                            <a href="javascript:void(0)" class="krds-btn small line" title="추가">
+                                                <i class="svg-icon ico-plus"></i>
+                                            </a>
+                                        </td>
                                     </tr>
                                     <tr class="t-foot">
-                                        <td colspan="3">합계</td>
-                                        <td>3,000</td>
+                                        <td colspan="3" class="aling-right">합계</td>
+                                        <td colspan="2"><input type="text" id="" class="krds-input small aling-right" placeholder="3,000" disabled>천원</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -180,62 +187,52 @@
                     </div>
                     
                     <div class="view-contents">
-                        <div data-include-file="include/file_upload.html" class="includeJs"><!-- file upload -->
-                            <div class="krds-file-upload line">
-                                <!-- 파일 업로드 상단 -->
-                                <div class="file-head">
-                                    <h3 class="tit">파일업로드</h3>
-                                    <p>사업신청서를 첨부해주세요.</p>
-                                </div>  
-                                <!-- //파일 업로드 상단 -->
-
-                                <!-- 파일 업로드 영역 -->
-                                <div class="file-upload">
-                                    <p class="txt">파일 용량 100M 이하만 업로드 가능합니다.</p>
-                                    <div class="file-upload-btn-wrap">
-                                        <input type="file" name="myFile" id="fileu-upload" hidden="">
-                                        <label for="fileu-upload">
-                                            <button type="button" class="krds-btn medium"><i class="svg-icon ico-upload"></i>파일선택</button>
-                                        </label>
-                                    </div>
+                        <div class="krds-file-upload line">
+                            <div class="file-head">
+                                <h3 class="tit">파일업로드</h3>
+                                <p>사업신청서를 첨부해주세요.</p>
+                            </div>  
+                            <div class="file-upload">
+                                <p class="txt">파일 용량 100MB 이하만 업로드 가능합니다.</p>
+                                <div class="file-upload-btn-wrap">
+                                    <input type="file" name="myFile" id="fileu-upload" hidden="">
+                                    <label for="fileu-upload">
+                                        <button type="button" class="krds-btn small">파일선택</button>
+                                    </label>
                                 </div>
-                                <!-- //파일 업로드 영역 -->
-                                <!-- 파일 리스트 영역 -->
-                                <div class="file-list">
-                                    <ul class="upload-list">
-                                        <li>
-                                            <div class="file-info">
-                                                <div class="file-name">2025 마을기반 교육과정 자율집중운영학교 운영 계획.hwpx (69.5K)</div>
-                                                <div class="btn-wrap">
-                                                    <button type="button" class="krds-btn medium text">삭제 <i class="svg-icon ico-delete-fill"></i></button>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="is-error">
-                                            <div class="file-info">
-                                                <div class="file-name">2025 마을기반 교육과정 자율집중운영학교 운영 계획.hwpx (69.5K)</div>
-                                                <div class="btn-wrap">
-                                                    <button type="button" class="krds-btn medium text">삭제 <i class="svg-icon ico-delete-fill"></i></button>
-                                                </div>
-                                            </div>
-                                            <p class="file-hint-invalid">
-                                                등록 가능한 파일 용량을 초과하였습니다.<br>
-                                                20MB 미만의 파일만 등록할 수 있습니다.
-                                            </p>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!-- //파일 리스트 영역 -->
                             </div>
-                            <!-- //file upload -->
+                            <div class="file-list">
+                                <ul class="upload-list">
+                                    <li>
+                                        <div class="file-info">
+                                            <div class="file-name">2025 마을기반 교육과정 자율집중운영학교 운영 계획.hwpx (69.5K)</div>
+                                            <div class="btn-wrap">
+                                                <button type="button" class="krds-btn medium text">삭제 <i class="svg-icon ico-delete-fill"></i></button>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="is-error">
+                                        <div class="file-info">
+                                            <div class="file-name">2025 마을기반 교육과정 자율집중운영학교 운영 계획.hwpx (69.5K)</div>
+                                            <div class="btn-wrap">
+                                                <button type="button" class="krds-btn medium text">삭제 <i class="svg-icon ico-delete-fill"></i></button>
+                                            </div>
+                                        </div>
+                                        <p class="file-hint-invalid">
+                                            등록 가능한 파일 용량을 초과하였습니다.<br>
+                                            100MB 미만의 파일만 등록할 수 있습니다.
+                                        </p>
+                                    </li>
+                                </ul>
                             </div>
+                        </div>
                     </div>
                 </div>
-                <div class="page-btn-wrap">
+                <div class="page-btn-wrap m-column both">
                     <button type="button" class="krds-btn tertiary">목록으로 가기</button>
                     <div>
                         <button type="button" class="krds-btn tertiary">임시저장</button>
-                        <button type="button" class="krds-btn primary">결재요청</button>
+                        <button type="button" class="krds-btn primary open-modal" data-target="modal-approve" title="결재요청">결재요청</button>
                     </div>
                 </div>
             </section>
