--- a/kr/tmpl/modal.html
+++ b/kr/tmpl/modal.html
@@ -156,3 +156,104 @@
   <div class="modal-back"></div>
 </section>
 <!-- //반려 사유 입력 -->
+
+<!-- 결재요청 -->
+<section id="modal-approve" class="krds-modal fade" role="dialog" aria-labelledby="tit_modal-approve">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h2 id="tit_modal-approve" class="modal-title">결재요청</h2>
+        <div class="approve-line">
+          <p class="modal-description">결재자를 선택하세요.</p>
+          <select id="select_sorting" class="krds-form-select-sort" title="결재선택">
+            <option value="">1단결재</option>
+            <option value="" selected>2단결재</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- Modal Contents -->
+      <div class="modal-conts">
+        <div class="conts-area">
+          <div class="krds-table-wrap">
+            <table class="tbl col data center">
+                <caption>사업신청관리 목록 표</caption>
+                <colgroup>
+                    <col style="width:15%;">
+                    <col style="width:30%;">
+                    <col>
+                </colgroup>
+                <thead>
+                <tr>
+                    <th scope="col">
+                      <div class="krds-form-check">
+                        <input type="checkbox" id="checkAll">
+                        <label for="checkAll"><span class="sr-only">전체 선택</span></label>
+                      </div>
+                    </th>
+                    <th scope="col">구분</th>
+                    <th scope="col">직위</th>
+                    <th scope="col">이름</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>      
+                            <div class="krds-form-check">
+                              <input type="checkbox" name="chk_1" id="chk_1">
+                              <label for="chk_1"><span class="sr-only">1행 선택</span></label>
+                            </div>
+                        </td>
+                        <td>결재</td>
+                        <td>교장</td>
+                        <td>박교장</td>
+                    </tr>
+                    <tr>
+                        <td>      
+                            <div class="krds-form-check">
+                              <input type="checkbox" name="chk_1" id="chk_2">
+                              <label for="chk_2"><span class="sr-only">2행 선택</span></label>
+                            </div>
+                        </td>
+                        <td>결재</td>
+                        <td>검토</td>
+                        <td>김교감</td>
+                    </tr>
+                    <tr>
+                        <td>      
+                            <div class="krds-form-check">
+                              <input type="checkbox" name="chk_1" id="chk_3">
+                              <label for="chk_3"><span class="sr-only">3행 선택</span></label>
+                            </div>
+                        </td>
+                        <td>기안</td>
+                        <td>교사</td>
+                        <td>홍길동</td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+        </div>
+      </div>
+
+     <!-- modal btn -->
+      <div class="modal-btn btn-wrap">
+        <button type="button" class="krds-btn medium tertiary close-modal">취소</button>
+        <button type="button" class="krds-btn medium primary close-modal">확인</button>
+      </div>
+
+      <!-- Close Button -->
+      <button type="button" class="krds-btn medium icon btn-close close-modal" aria-label="닫기">
+        <span class="sr-only">닫기</span>
+        <i class="svg-icon ico-popup-close"></i>
+      </button>
+
+    </div>
+  </div>
+
+  <!-- Modal Background -->
+  <div class="modal-back"></div>
+</section>
+<!-- //결재요청 -->
