feat(page):게시판 페이지 추가 작업

--- a/adm/html/application-admin-selected-list.html
+++ b/adm/html/application-admin-selected-list.html
@@ -560,7 +560,7 @@
               </div>
               <div class="btn-wrap">
                 <a href="javascript:void(0)" class="krds-btn small tertiary">선택수정</a>
-                <a href="javascript:void(0)" class="krds-btn small tertiary">선택삭제</a>
+                <a class="krds-btn medium tertiary open-modal" data-target="modal-delete-confirm">삭제</a>
                 <a href="javascript:void(0)" class="krds-btn small tertiary">선택SMS발송</a>
               </div>
             </div>
