--- a/adm/html/member-auditor-list.html
+++ b/adm/html/member-auditor-list.html
@@ -179,7 +179,7 @@
                     <td>감사1팀</td>
                     <td>saeupcne01</td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -211,7 +211,7 @@
                     <td>감사2팀</td>
                     <td>saeupcne02</td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -243,7 +243,7 @@
                     <td>감사3팀</td>
                     <td>saeupcne03</td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -275,7 +275,7 @@
                     <td>감사4팀</td>
                     <td>saeupcne04</td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -307,7 +307,7 @@
                     <td>감사5팀</td>
                     <td>saeupcne05</td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
