--- a/adm/html/member-program-supervisor-list.html
+++ b/adm/html/member-program-supervisor-list.html
@@ -178,10 +178,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -217,10 +217,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -256,10 +256,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -295,10 +295,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -334,10 +334,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
