--- a/adm/html/member-supervisor-list.html
+++ b/adm/html/member-supervisor-list.html
@@ -157,10 +157,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -195,10 +195,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -233,10 +233,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -271,10 +271,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
@@ -309,10 +309,10 @@
                         </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>
                         <div class="tooltip-hs">
