--- a/adm/html/member-teacher-list.html
+++ b/adm/html/member-teacher-list.html
@@ -203,10 +203,10 @@
                       </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>아산</td>
                     <td>
@@ -253,10 +253,10 @@
                       </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>아산</td>
                     <td>
@@ -303,10 +303,10 @@
                       </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>아산</td>
                     <td>
@@ -353,10 +353,10 @@
                       </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>아산</td>
                     <td>
@@ -403,10 +403,10 @@
                       </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>아산</td>
                     <td>
@@ -453,10 +453,10 @@
                       </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>아산</td>
                     <td>
@@ -503,10 +503,10 @@
                       </div>
                     </td>
                     <td>
-                       <input type="text" class="krds-input small aling-center" value="홍길동">
+                       <input type="text" class="krds-input small align-center" value="홍길동">
                     </td>
                     <td>
-                      <input type="text" class="krds-input small aling-center" value="010-1234-1234">
+                      <input type="text" class="krds-input small align-center" value="010-1234-1234">
                     </td>
                     <td>아산</td>
                     <td>
