--- a/adm/html/operation-popup-list.html
+++ b/adm/html/operation-popup-list.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="krds-table-wrap">
-              <table class="tbl col data center">
+              <table class="tbl col data center" data-table="popup-list">
                 <caption class="sr-only">팝업 목록 관리 테이블</caption>
                 <colgroup>
                     <col style="width:2%;">
