--- a/adm/html/program-admin-list.html
+++ b/adm/html/program-admin-list.html
@@ -162,7 +162,7 @@
                     </th>
                     <th scope="col">사업년도</th>
                     <th scope="col">사업명</th>
-                    <th scope="col"><p class="aling-right">예산액(천원)<br>교당평균액(천원)</p></th>
+                    <th scope="col"><p class="align-right">예산액(천원)<br>교당평균액(천원)</p></th>
                     <th scope="col">유</th>
                     <th scope="col">초</th>
                     <th scope="col">중</th>
