--- a/adm/html/program-list.html
+++ b/adm/html/program-list.html
@@ -126,7 +126,7 @@
                 <colgroup>
                   <col style="width:5%;">
                   <col>
-                  <col style="width:20%;">
+                  <col style="width:14%;">
                   <col style="width:2%;">
                   <col style="width:2%;">
                   <col style="width:2%;">
@@ -138,13 +138,13 @@
                   <col style="width:14%;">
                   <col style="width:20%;">
                   <col style="width:7%;">
-                  <col style="width:7%;">
+                  <col style="width:5%;">
                 </colgroup>
                 <thead>
                   <tr>
                     <th scope="col">사업년도</th>
                     <th scope="col">사업명</th>
-                    <th scope="col"><p class="aling-right">예산액(천원)<br>교당평균액(천원)</p></th>
+                    <th scope="col"><p class="align-right">예산액(천원)<br>교당평균액(천원)</p></th>
                     <th scope="col">유</th>
                     <th scope="col">초</th>
                     <th scope="col">중</th>
@@ -173,7 +173,7 @@
                       </div>
                     </td>
                     <td>
-                      <div class="td-in-col2 aling-right">
+                      <div class="td-in-col2 align-right">
                         <p>2,640,000</p>
                         <strong>80,000</strong>
                       </div>
@@ -246,7 +246,7 @@
                       </div>
                     </td>
                     <td>
-                      <div class="td-in-col2 aling-right">
+                      <div class="td-in-col2 align-right">
                         <p>2,640,000</p>
                         <strong>80,000</strong>
                       </div>
@@ -319,7 +319,7 @@
                       </div>
                     </td>
                     <td>
-                      <div class="td-in-col2 aling-right">
+                      <div class="td-in-col2 align-right">
                         <p>2,640,000</p>
                         <strong>80,000</strong>
                       </div>
@@ -392,7 +392,7 @@
                       </div>
                     </td>
                     <td>
-                      <div class="td-in-col2 aling-right">
+                      <div class="td-in-col2 align-right">
                         <p>2,640,000</p>
                         <strong>80,000</strong>
                       </div>
@@ -465,7 +465,7 @@
                       </div>
                     </td>
                     <td>
-                      <div class="td-in-col2 aling-right">
+                      <div class="td-in-col2 align-right">
                         <p>2,640,000</p>
                         <strong>80,000</strong>
                       </div>
@@ -538,7 +538,7 @@
                       </div>
                     </td>
                     <td>
-                      <div class="td-in-col2 aling-right">
+                      <div class="td-in-col2 align-right">
                         <p>2,640,000</p>
                         <strong>80,000</strong>
                       </div>
@@ -611,7 +611,7 @@
                       </div>
                     </td>
                     <td>
-                      <div class="td-in-col2 aling-right">
+                      <div class="td-in-col2 align-right">
                         <p>2,640,000</p>
                         <strong>80,000</strong>
                       </div>
