--- a/adm/html/board-admin-archive-list.html
+++ b/adm/html/board-admin-archive-list.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="충남교육청" />
-  <title th:text="${pageTitle}">공지사항 최고관리자 board-admin-notice-list</title>
+  <title th:text="${pageTitle}">자료실 최고관리자 board-admin-archive-list</title>
 
   <link rel="icon" href="/favicon.ico" />
 
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="../css/admin-custom.css">
 </head>
 
-<body>
+<body data-current-menu="board" data-current-submenu="board-archive" >
 
 <div id="wrap" class="g-wrap">
 
@@ -68,7 +68,7 @@
                                     </button>
                                 </div>
                                 <div class="btn-wrap">
-                                    <a href="../html/board-admin-notice-create.html" target="_self" class="krds-btn medium primary">글쓰기</a>
+                                    <a href="../html/board-admin-archive-create.html" target="_self" class="krds-btn medium primary">글쓰기</a>
                                 </div>
                             </div>
                         </div>
@@ -79,40 +79,42 @@
             <div class="krds-structured-list">
                 <ul class="board-notice-list">
                     <li class="notice-item">
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="category">공지</span>
                             <p class="title">
-                                <strong>단위학교 사업선택제 누리집 2.0 오픈</strong>
+                                <strong>단위학교 사업선택제 누리집 2.0 사용설명서</strong>
+                                <i class="svg-icon ico-file"><span class="sr-only">첨부파일</span></i>
                             </p>
                             <span class="department">정책기획과</span>
                             <span class="date">2025.12.30</span>
                         </a>
                     </li>
                     <li class="notice-item">
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="category">공지</span>
                             <p class="title">
-                                <strong>[공지] 권한 승계 관련 안내</strong>
+                                <strong>[공지] 권한 승계 방법 자료</strong>
+                                <i class="svg-icon ico-file"><span class="sr-only">첨부파일</span></i>
                             </p>
                             <span class="department">정책기획과</span>
                             <span class="date">2025.10.20</span>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">27</span>
                             <p class="title">
-                                <strong>2025년 사제동행 공감체험 「함께 걷는 평화톡톡」</strong>
+                                <strong>단위학교 사업선택제 자료실 입니다.</strong>
                             </p>
                             <span class="department">유아교육복지과 유아교육팀</span>
                             <span class="date">2025.10.24</span>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">26</span>
                             <p class="title">
-                                <strong>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
+                                <strong>단위학교 사업선택제 자료실 입니다.</strong>
                                 <i class="svg-icon ico-file"><span class="sr-only">첨부파일</span></i>
                             </p>
                             <span class="department">중등교육과</span>
@@ -120,20 +122,20 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">25</span>
                             <p class="title">
-                                <strong>2025학년도 난독(증)경계선지능 학생지원 중점학급</strong>
+                                 <strong>단위학교 사업선택제 자료실 입니다.</strong>
                             </p>
                             <span class="department">미래인재과</span>
                             <span class="date">2025.10.21</span>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">24</span>
                             <p class="title">
-                                <strong>2025년 사제동행 공감체험 「함께 걷는 평화톡톡」</strong>
+                                <strong>단위학교 사업선택제 자료실 입니다.</strong>
                                 <i class="svg-icon ico-file"><span class="sr-only">첨부파일</span></i>
                             </p>
                             <span class="department">정책기획과</span>
@@ -141,10 +143,10 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">23</span>
                             <p class="title">
-                                <strong>2025 충남형 IB학교(준비-관심) 운영</strong>
+                                 <strong>단위학교 사업선택제 자료실 입니다.</strong>
                                 <i class="svg-icon ico-file"><span class="sr-only">첨부파일</span></i>
                             </p>
                             <span class="department">학력향상지원센터</span>
@@ -152,40 +154,40 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">22</span>
                             <p class="title">
-                                <strong>우리지역 예술가와의 만남_학교갤러리 운영 프로그램 지원</strong>
+                                 <strong>단위학교 사업선택제 자료실 입니다.</strong>
                             </p>
                             <span class="department">초등특수교육과</span>
                             <span class="date">2025.10.19</span>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">21</span>
                             <p class="title">
-                                <strong>[별도모집-자료집계] 2025 으라차차! 아이사랑 프로그램</strong>
+                                 <strong>단위학교 사업선택제 자료실 입니다.</strong>
                             </p>
                             <span class="department">중등교육과</span>
                             <span class="date">2025.10.19</span>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">20</span>
                             <p class="title">
-                                <strong>[별도모집] 2025년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
+                                <strong>단위학교 사업선택제 자료실 입니다.</strong>
                             </p>
                             <span class="department">중등교육과</span>
                             <span class="date">2025.10.19</span>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">19</span>
                             <p class="title">
-                                <strong>어깨동무 활동(학교별 학교폭력 예방활동) 프로그램 운영</strong>
+                                 <strong>단위학교 사업선택제 자료실 입니다.</strong>
                                 <i class="svg-icon ico-file"><span class="sr-only">첨부파일</span></i>
                             </p>
                             <span class="department">중등교육과</span>
@@ -193,10 +195,10 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../html/board-admin-notice-view.html" target="_self" title="게시글보기">
+                        <a href="../html/board-admin-archive-view.html" target="_self" title="게시글보기">
                             <span class="number">18</span>
                             <p class="title">
-                                <strong>2025 충남형 IB학교(준비-관심) 운영</strong>
+                                 <strong>단위학교 사업선택제 자료실 입니다.</strong>
                             </p>
                             <span class="department">학력향상지원센터</span>
                             <span class="date">2025.10.19</span>
@@ -207,7 +209,7 @@
 
             <div class="page-btn-wrap">
               <div class="btn-wrap">
-                <a href="../html/board-admin-notice-create.html" target="_self" class="krds-btn medium primary">글쓰기</a>
+                <a href="../html/board-admin-archive-create.html" target="_self" class="krds-btn medium primary">글쓰기</a>
               </div>
             </div>
 
