--- a/adm/html/board-admin-archive-modify.html
+++ b/adm/html/board-admin-archive-modify.html
@@ -43,7 +43,7 @@
 
   <main id="container" class="page-edit board">
     <div class="inner">
-        <strong class="page-title">수정</strong>
+        <strong class="page-title">자료 수정</strong>
         <div class="contents contents-box contents-box-shadow">
             <div class="board-page-title line conts-hd">
                 <div class="krds-form-check large">
@@ -61,7 +61,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input large notice-tit" placeholder="제목을 입력해주세요." value="[공지] 권한 승계 관련 안내">
+                                    <input type="text" class="krds-input large notice-tit" placeholder="제목을 입력해주세요." value="단위학교 사업선택제 누리집 2.0 사용설명서">
                                 </div>
                             </div>
                         </div>
@@ -72,13 +72,8 @@
                             <div class="form-group">
                                 <div class="form-conts textarea-wrap">
                                     <textarea class="krds-input notice-det" placeholder="내용을 입력해주세요.">
-권한 승계 요청 전!!
-1. [확인 필수] 승계받으실 선생님 회원가입 하셨나요?
-2. [확인 필수] 승계받으실 선생님 소속교 현행화 하셨나요? (마이페이지에서 변경 가능)
-인사발령이나 업무변경으로 사업담당자가 변경된 경우 1:1문의란에 권한 승계를 요청해 주시기 바랍니다.
-< 사업 승계 신청 시 작성해야할 내용 >
-1. 학교명 / 2. 사업명 또는 사업번호 / 3. 인계자(전임자) / 4. 인수자(후임자)
-(작성예시: 충남초등학교/선택01, 학교도서관개선사업/박보검/아이유)
+단위학교 사업선택제 누리집 2.0 사용설명서
+단위학교 사업선택제 누리집 2.0 사용 매뉴얼을 다음과 같이 배포합니다.
                                     </textarea>
                                     <p class="textarea-count">
                                         <span class="count-now">267</span><span class="count-total">/10,000</span>
@@ -107,7 +102,7 @@
                         <ul class="upload-list">
                             <li>
                                 <div class="file-info">
-                                    <div class="file-name">2025 마을기반 교육과정 자율집중운영학교 운영 계획.hwpx (69.5K)</div>
+                                    <div class="file-name">단위학교 사업선택제 누리집 2.0 사용 매뉴얼.pdf [PDF, 1.28 MB]</div>
                                     <div class="btn-wrap">
                                         <button type="button" class="krds-btn medium text">삭제 <i class="svg-icon ico-delete-fill"></i></button>
                                     </div>
@@ -115,7 +110,7 @@
                             </li>
                             <li class="is-error">
                                 <div class="file-info">
-                                    <div class="file-name">2025 마을기반 교육과정 자율집중운영학교 운영 계획.hwpx (69.5K)</div>
+                                    <div class="file-name">단위학교 사업선택제 누리집 2.0 사용 매뉴얼.pdf [PDF, 1.28 MB]</div>
                                     <div class="btn-wrap">
                                         <button type="button" class="krds-btn medium text">삭제 <i class="svg-icon ico-delete-fill"></i></button>
                                     </div>
@@ -129,8 +124,8 @@
 
             <div class="page-btn-wrap conts-ft">
                 <div class="btn-wrap">
-                    <a href="../html/board-admin-notice-list.html" class="krds-btn medium tertiary">취소</a>
-                    <a href="../html/board-admin-notice-list.html" class="krds-btn medium primary pressed">수정등록</a>
+                    <a href="../html/board-admin-archive-list.html" class="krds-btn medium tertiary">취소</a>
+                    <a href="../html/board-admin-archive-list.html" class="krds-btn medium primary pressed">수정등록</a>
                 </div>
             </div>
         </div>
