--- a/adm/html/operation-program-settings.html
+++ b/adm/html/operation-program-settings.html
@@ -88,7 +88,7 @@
                                 제한없음
                             </label>
                             <div class="form-group-inner">
-                                <input type="number" class="krds-input aling-right large approval-number" value="20">
+                                <input type="number" class="krds-input align-right large approval-number" value="20">
                                 <span class="unit">개</span>
                             </div>
                         </div>
@@ -104,7 +104,7 @@
                                 제한없음
                             </label>
                             <div class="form-group-inner">
-                                <input type="number" class="krds-input aling-right large approval-number" value="20">
+                                <input type="number" class="krds-input align-right large approval-number" value="20">
                                 <span class="unit">개</span>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                                 제한없음
                             </label>
                             <div class="form-group-inner">
-                                <input type="number" class="krds-input aling-right large approval-number" value="20">
+                                <input type="number" class="krds-input align-right large approval-number" value="20">
                                 <span class="unit">개</span>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                                 제한없음
                             </label>
                             <div class="form-group-inner">
-                                <input type="number" class="krds-input aling-right large approval-number" value="20">
+                                <input type="number" class="krds-input align-right large approval-number" value="20">
                                 <span class="unit">개</span>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                                 제한없음
                             </label>
                             <div class="form-group-inner">
-                                <input type="number" class="krds-input aling-right large approval-number" value="20">
+                                <input type="number" class="krds-input align-right large approval-number" value="20">
                                 <span class="unit">개</span>
                             </div>
                         </div>
